# anno-server

./: .dockerignore  .env.example  .gitignore  Caddyfile.example  Dockerfile  README.md  docker-compose.example.yml  docker-entrypoint.sh  openapi.json  pyproject.toml
.github/workflows/: docker-build.yml
anno/: admin.py  api.py  asgi.py  command.py  models.py  pagination.py  settings.py  urls.py  wsgi.py
anno_exports/: apps.py  controllers.py  models.py  schemas.py  services.py  tasks.py  tests.py
anno_exports/migrations/: 0001_initial.py  0002_remove_exporttask_completed_items_and_more.py
anno_images/: admin.py  apps.py  cache.py  controllers.py  models.py  schemas.py  signals.py
anno_images/migrations/: 0001_initial.py  0002_operation_source_and_more.py
anno_infers/: admin.py  apps.py  auth.py  controllers.py  models.py  schemas.py  services.py  tasks.py  tests.py
anno_infers/migrations/: 0001_initial.py  0002_inferenceresult_inferencerun_inferencetask_and_more.py  0003_remove_interactiveinferencesession_anno_intera_final_a_8f8210_idx_and_more.py  0004_interactiveinferencesession_session_token.py  0005_interactiveinferenceoperation_annotation.py  0006_remove_from_to_annotation.py  0007_provider_max_concurrency.py  0008_remove_max_concurrency.py  (+5 more)
anno_projects/: admin.py  apps.py  controllers.py  models.py  permissions.py  schemas.py  signals.py  tests.py
anno_tags/: admin.py  apps.py  controllers.py  models.py  schemas.py  tests.py
anno_users/: apps.py  controllers.py  models.py  permissions.py  schemas.py  signals.py
docker/caddy/: Caddyfile  (+1 more)
(+522 files in other folders)
