[project]
name = "anno"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django>=6.0.6",
    "django-ninja>=1.6.2",
    "django-ninja-extra>=0.31.5",
    "django-ninja-jwt>=5.4.4",
    "django-simple-history>=3.12.0",
    "psycopg[binary]>=3.3.4",
    "django-storages[s3]>=1.14",
    "boto3>=1.34",
    "python-dotenv>=1.0",
    "pillow>=12.2.0",
    "httpx>=0.28.1",
    "django-tasks-db>=0.12.0",
    "gunicorn>=23.0.0",
    "anno-sdk",
    "whitenoise>=6.12.0",
]

[tool.uv.sources]
anno-sdk = { path = "../anno-sdk", editable = true }

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-django>=4.12.0",
]
